--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <header></header>
+        <header><h1>Hello</h1></header>
     </div>
 </body>
 </html>
